tests/snapshots/chez_file_compat_snapshots__chez_file_arith.scm.snap
---
source: tests/chez_file_compat_snapshots.rs
expression: snapshot_text
---
File: "arith.scm"
Bin  : chez
Moria: 3 :: Number
Chez : 3
