tests/snapshots/chez_file_compat_snapshots__chez_file_bindings.scm.snap
---
source: tests/chez_file_compat_snapshots.rs
expression: snapshot_text
---
File: "bindings.scm"
Bin  : chez
Moria: 3
Chez : 3
