tests/snapshots/chez_file_compat_snapshots__chez_file_lists.scm.snap
---
source: tests/chez_file_compat_snapshots.rs
expression: snapshot_text
---
File: "lists.scm"
Bin  : chez
Moria: (0 1 2) :: List Number
Chez : (0 1 2)
