tests/snapshots/chez_file_compat_snapshots__chez_file_logic.scm.snap
---
source: tests/chez_file_compat_snapshots.rs
expression: snapshot_text
---
File: "logic.scm"
Bin  : chez
Moria: #t :: Boolean
Chez : #t
